Fix z-index of headers/nav

--- a/static/css/main_new.less
+++ b/static/css/main_new.less
@@ -216,7 +216,7 @@ a.sub-comments {
     color: #777;
   }
   #navigation_items {
-    z-index: 1000;
+    z-index: 1001;
     li {
       a:hover {
         text-decoration: none;
